deploy: b3b09d971471cff64c4b8e978bb64eb9693697fc

--- a/总线标准.html
+++ b/总线标准.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>前言 - 计算机组成原理</title>
+        <title>总线标准 - 计算机组成原理</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="前言.html" class="active"><strong aria-hidden="true">1.</strong> 前言</a></li><li class="chapter-item expanded "><a href="计算机系统概述.html"><strong aria-hidden="true">2.</strong> 计算机系统概述</a></li><li class="chapter-item expanded "><a href="数据的表示和运算.html"><strong aria-hidden="true">3.</strong> 数据的表示和运算</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="数制和编码.html"><strong aria-hidden="true">3.1.</strong> 数制和编码</a></li><li class="chapter-item expanded "><a href="运算方法和运算电路.html"><strong aria-hidden="true">3.2.</strong> 运算方法和运算电路</a></li><li class="chapter-item expanded "><a href="浮点数的表示与运算.html"><strong aria-hidden="true">3.3.</strong> 浮点数的表示与运算</a></li></ol></li><li class="chapter-item expanded "><a href="存储系统.html"><strong aria-hidden="true">4.</strong> 存储系统</a></li><li class="chapter-item expanded "><a href="指令系统.html"><strong aria-hidden="true">5.</strong> 指令系统</a></li><li class="chapter-item expanded "><a href="中央处理器CPU.html"><strong aria-hidden="true">6.</strong> 中央处理器CPU</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CPU的功能和基本结构.html"><strong aria-hidden="true">6.1.</strong> CPU的功能和基本结构</a></li><li class="chapter-item expanded "><a href="指令执行过程.html"><strong aria-hidden="true">6.2.</strong> 指令执行过程</a></li><li class="chapter-item expanded "><a href="数据通路.html"><strong aria-hidden="true">6.3.</strong> 数据通路</a></li><li class="chapter-item expanded "><a href="控制器设计.html"><strong aria-hidden="true">6.4.</strong> 控制器设计</a></li><li class="chapter-item expanded "><a href="指令流水线.html"><strong aria-hidden="true">6.5.</strong> 指令流水线</a></li><li class="chapter-item expanded "><a href="多处理器系统.html"><strong aria-hidden="true">6.6.</strong> 多处理器系统</a></li></ol></li><li class="chapter-item expanded "><a href="总线.html"><strong aria-hidden="true">7.</strong> 总线</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="总线概述.html"><strong aria-hidden="true">7.1.</strong> 总线概述</a></li><li class="chapter-item expanded "><a href="总线仲裁.html"><strong aria-hidden="true">7.2.</strong> 总线仲裁</a></li><li class="chapter-item expanded "><a href="总线操作和定时.html"><strong aria-hidden="true">7.3.</strong> 总线操作和定时</a></li><li class="chapter-item expanded "><a href="总线标准.html"><strong aria-hidden="true">7.4.</strong> 总线标准</a></li></ol></li><li class="chapter-item expanded "><a href="输入输出系统.html"><strong aria-hidden="true">8.</strong> 输入输出系统</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="输入输出系统基本概念.html"><strong aria-hidden="true">8.1.</strong> 输入输出系统基本概念</a></li><li class="chapter-item expanded "><a href="IO接口.html"><strong aria-hidden="true">8.2.</strong> IO接口</a></li><li class="chapter-item expanded "><a href="IO控制方式.html"><strong aria-hidden="true">8.3.</strong> IO控制方式</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="前言.html"><strong aria-hidden="true">1.</strong> 前言</a></li><li class="chapter-item expanded "><a href="计算机系统概述.html"><strong aria-hidden="true">2.</strong> 计算机系统概述</a></li><li class="chapter-item expanded "><a href="数据的表示和运算.html"><strong aria-hidden="true">3.</strong> 数据的表示和运算</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="数制和编码.html"><strong aria-hidden="true">3.1.</strong> 数制和编码</a></li><li class="chapter-item expanded "><a href="运算方法和运算电路.html"><strong aria-hidden="true">3.2.</strong> 运算方法和运算电路</a></li><li class="chapter-item expanded "><a href="浮点数的表示与运算.html"><strong aria-hidden="true">3.3.</strong> 浮点数的表示与运算</a></li></ol></li><li class="chapter-item expanded "><a href="存储系统.html"><strong aria-hidden="true">4.</strong> 存储系统</a></li><li class="chapter-item expanded "><a href="指令系统.html"><strong aria-hidden="true">5.</strong> 指令系统</a></li><li class="chapter-item expanded "><a href="中央处理器CPU.html"><strong aria-hidden="true">6.</strong> 中央处理器CPU</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CPU的功能和基本结构.html"><strong aria-hidden="true">6.1.</strong> CPU的功能和基本结构</a></li><li class="chapter-item expanded "><a href="指令执行过程.html"><strong aria-hidden="true">6.2.</strong> 指令执行过程</a></li><li class="chapter-item expanded "><a href="数据通路.html"><strong aria-hidden="true">6.3.</strong> 数据通路</a></li><li class="chapter-item expanded "><a href="控制器设计.html"><strong aria-hidden="true">6.4.</strong> 控制器设计</a></li><li class="chapter-item expanded "><a href="指令流水线.html"><strong aria-hidden="true">6.5.</strong> 指令流水线</a></li><li class="chapter-item expanded "><a href="多处理器系统.html"><strong aria-hidden="true">6.6.</strong> 多处理器系统</a></li></ol></li><li class="chapter-item expanded "><a href="总线.html"><strong aria-hidden="true">7.</strong> 总线</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="总线概述.html"><strong aria-hidden="true">7.1.</strong> 总线概述</a></li><li class="chapter-item expanded "><a href="总线仲裁.html"><strong aria-hidden="true">7.2.</strong> 总线仲裁</a></li><li class="chapter-item expanded "><a href="总线操作和定时.html"><strong aria-hidden="true">7.3.</strong> 总线操作和定时</a></li><li class="chapter-item expanded "><a href="总线标准.html" class="active"><strong aria-hidden="true">7.4.</strong> 总线标准</a></li></ol></li><li class="chapter-item expanded "><a href="输入输出系统.html"><strong aria-hidden="true">8.</strong> 输入输出系统</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="输入输出系统基本概念.html"><strong aria-hidden="true">8.1.</strong> 输入输出系统基本概念</a></li><li class="chapter-item expanded "><a href="IO接口.html"><strong aria-hidden="true">8.2.</strong> IO接口</a></li><li class="chapter-item expanded "><a href="IO控制方式.html"><strong aria-hidden="true">8.3.</strong> IO控制方式</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,14 +174,17 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="前言"><a class="header" href="#前言">前言</a></h1>
+<h1 id="总线标准"><a class="header" href="#总线标准">总线标准</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="总线操作和定时.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="计算机系统概述.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="输入输出系统.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -191,8 +194,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="总线操作和定时.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="计算机系统概述.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="输入输出系统.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
