--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="前言.html"><strong aria-hidden="true">1.</strong> 前言</a></li><li class="chapter-item expanded "><a href="计算机系统概述.html"><strong aria-hidden="true">2.</strong> 计算机系统概述</a></li><li class="chapter-item expanded "><a href="数据的表示和运算.html"><strong aria-hidden="true">3.</strong> 数据的表示和运算</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="数制和编码.html"><strong aria-hidden="true">3.1.</strong> 数制和编码</a></li><li class="chapter-item expanded "><a href="运算方法和运算电路.html"><strong aria-hidden="true">3.2.</strong> 运算方法和运算电路</a></li><li class="chapter-item expanded "><a href="浮点数的表示与运算.html"><strong aria-hidden="true">3.3.</strong> 浮点数的表示与运算</a></li></ol></li><li class="chapter-item expanded "><a href="存储系统.html"><strong aria-hidden="true">4.</strong> 存储系统</a></li><li class="chapter-item expanded "><a href="指令系统.html"><strong aria-hidden="true">5.</strong> 指令系统</a></li><li class="chapter-item expanded "><a href="中央处理器CPU.html"><strong aria-hidden="true">6.</strong> 中央处理器CPU</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CPU的功能和基本结构.html"><strong aria-hidden="true">6.1.</strong> CPU的功能和基本结构</a></li><li class="chapter-item expanded "><a href="指令执行过程.html"><strong aria-hidden="true">6.2.</strong> 指令执行过程</a></li><li class="chapter-item expanded "><a href="数据通路.html"><strong aria-hidden="true">6.3.</strong> 数据通路</a></li><li class="chapter-item expanded "><a href="控制器设计.html"><strong aria-hidden="true">6.4.</strong> 控制器设计</a></li><li class="chapter-item expanded "><a href="指令流水线.html"><strong aria-hidden="true">6.5.</strong> 指令流水线</a></li><li class="chapter-item expanded "><a href="多处理器系统.html"><strong aria-hidden="true">6.6.</strong> 多处理器系统</a></li></ol></li><li class="chapter-item expanded "><a href="总线.html"><strong aria-hidden="true">7.</strong> 总线</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="总线概述.html"><strong aria-hidden="true">7.1.</strong> 总线概述</a></li><li class="chapter-item expanded "><a href="总线仲裁.html"><strong aria-hidden="true">7.2.</strong> 总线仲裁</a></li><li class="chapter-item expanded "><a href="总线操作和定时.html"><strong aria-hidden="true">7.3.</strong> 总线操作和定时</a></li><li class="chapter-item expanded "><a href="总线标准.html"><strong aria-hidden="true">7.4.</strong> 总线标准</a></li></ol></li><li class="chapter-item expanded "><a href="输入输出系统.html"><strong aria-hidden="true">8.</strong> 输入输出系统</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="输入输出系统基本概念.html"><strong aria-hidden="true">8.1.</strong> 输入输出系统基本概念</a></li><li class="chapter-item expanded "><a href="IO接口.html"><strong aria-hidden="true">8.2.</strong> IO接口</a></li><li class="chapter-item expanded "><a href="IO控制方式.html"><strong aria-hidden="true">8.3.</strong> IO控制方式</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,53 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
+<h1 id="前言"><a class="header" href="#前言">前言</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="计算机系统概述"><a class="header" href="#计算机系统概述">计算机系统概述</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="数据的表示和运算"><a class="header" href="#数据的表示和运算">数据的表示和运算</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="数制和编码"><a class="header" href="#数制和编码">数制和编码</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="运算方法和运算电路"><a class="header" href="#运算方法和运算电路">运算方法和运算电路</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="浮点数的表示与运算"><a class="header" href="#浮点数的表示与运算">浮点数的表示与运算</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="存储系统"><a class="header" href="#存储系统">存储系统</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="指令系统"><a class="header" href="#指令系统">指令系统</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="中央处理器cpu"><a class="header" href="#中央处理器cpu">中央处理器CPU</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="cpu的功能和基本结构"><a class="header" href="#cpu的功能和基本结构">CPU的功能和基本结构</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="指令执行过程"><a class="header" href="#指令执行过程">指令执行过程</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="数据通路"><a class="header" href="#数据通路">数据通路</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="控制器设计"><a class="header" href="#控制器设计">控制器设计</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="指令流水线"><a class="header" href="#指令流水线">指令流水线</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="多处理器系统"><a class="header" href="#多处理器系统">多处理器系统</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="总线"><a class="header" href="#总线">总线</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="总线概述"><a class="header" href="#总线概述">总线概述</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="总线仲裁"><a class="header" href="#总线仲裁">总线仲裁</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="总线操作和定时"><a class="header" href="#总线操作和定时">总线操作和定时</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="总线标准"><a class="header" href="#总线标准">总线标准</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="输入输出系统"><a class="header" href="#输入输出系统">输入输出系统</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="输入输出系统基本概念"><a class="header" href="#输入输出系统基本概念">输入输出系统基本概念</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="io接口"><a class="header" href="#io接口">IO接口</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="io控制方式"><a class="header" href="#io控制方式">IO控制方式</a></h1>
 
                     </main>
 
